@@ -17,3 +17,23 @@ module java.sql {
 
 1. `java --list-modules` to list all jdk modules
 2. `java --describe-module java.sql` to inspect module definition
+
+### Migration will fail if
+1. you use JDK types that have been encapsulated
+    ```bash
+    java --illegal-access=permit Main
+    ```
+    ```bash
+    javac --add-exports java.base/sun.security.x509=ALL-UNAMED Main.java
+    java --add-exports java.base/sun.security.x509=ALL-UNAMED Main
+    ```
+2. you use types from non-default Java modules
+    ```
+    javac --add-module javax.xml.bind Main.java
+    java --add-module javax.xml.bind Main
+    ```
+
+### Using `Jdeps`
+```bash
+jdeps -jdkinternals Main.class
+```
